[package]
name = "tracing-signoz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["headers"] }
axum-extra = { version = "0.7.7" }
axum-macros = "0.3.8"
tracing-opentelemetry = "0.21"
tonic = "0.10.2"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = "0.7.10"
tower-http = { version = "0.4.4", features = [
    "compression-br",
    "cors",
    "propagate-header",
    "sensitive-headers",
    "trace",
] }
tower-request-id = "0.2"
tracing = "0.1.37"
tracing-appender = "0.2"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = [
    "fmt",
    "json",
    "env-filter",
] }
opentelemetry = { version = "0.20.0", features = [
    "trace",
    "metrics",
    "rt-tokio",
] }
opentelemetry_sdk = { version = "0.20.0", default-features = false, features = [
    "trace",
] }
opentelemetry-otlp = { version = "0.13.0", features = ["tonic", "tls", "tls-roots"] }

opentelemetry-semantic-conventions = "0.12.0"
dotenvy = "0.15.7"

# declare lib
[lib]
name = "otel_tracer_signoz"
path = "src/lib/mod.rs"
